--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "langgraph>=0.2.0",
     "langgraph-prebuilt>=0.6.0",
     "langchain-core>=0.3.0",
-    "duckduckgo-search>=6.0.0",
+    "ddgs>=7.0.0",
 ]
 
 [project.scripts]
